log

Thu 14 Mar 2024 08:24:51 PM UTC: 
 exercises.c | 61 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 56 insertions(+), 5 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:75:7: error: unused variable ‘nuevoSize’ [-Werror=unused-variable]
   75 |   int nuevoSize = size1 + size2;
      |       ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a0daf5f
Thu 14 Mar 2024 08:24:59 PM UTC: 
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:75:7: error: unused variable ‘nuevoSize’ [-Werror=unused-variable]
   75 |   int nuevoSize = size1 + size2;
      |       ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a84499f
Thu 14 Mar 2024 08:26:18 PM UTC: 
 exercises.c | 11 -----------
 1 file changed, 11 deletions(-)
 tests:  0|4
total_score: 30/70
93c1afd
Thu 14 Mar 2024 08:29:39 PM UTC: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:75:7: error: unused variable ‘nuevoSize’ [-Werror=unused-variable]
   75 |   int nuevoSize = size1 + size2;
      |       ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5cbd352
Thu 14 Mar 2024 08:31:08 PM UTC: 
 exercises.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|4
total_score: 30/70
811cc55
Thu 14 Mar 2024 08:47:53 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
eff7220
Thu 14 Mar 2024 09:05:52 PM UTC: 
 exercises.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘cmp’:
exercises.c:79:10: error: request for member ‘n’ in something not a structure or union
   79 |   if(ptrP->n > ptrI->n) return 1;
      |          ^~
exercises.c:79:20: error: request for member ‘n’ in something not a structure or union
   79 |   if(ptrP->n > ptrI->n) return 1;
      |                    ^~
Compilation failed
d9ac528
Thu 14 Mar 2024 09:07:55 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
5f94926
Thu 14 Mar 2024 09:08:32 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
d5c46b7
Thu 14 Mar 2024 09:08:58 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
f9180db
Thu 14 Mar 2024 09:11:03 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
e693b72
Sat 16 Mar 2024 03:44:00 PM UTC: 
 exercises.c | 17 ++++++++++++++---
 1 file changed, 14 insertions(+), 3 deletions(-)
 tests:  0|3
total_score: 40/70
aad5920
Sat 16 Mar 2024 03:44:22 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|2
total_score: 50/70
fd24289
Sat 16 Mar 2024 03:46:05 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|2
total_score: 50/70
2f233ee
Sat 16 Mar 2024 11:55:18 PM UTC: 
 exercises.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  0|2
total_score: 50/70
c1726bc
Sun 17 Mar 2024 12:27:35 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|2
total_score: 50/70
bc548db
Sun 17 Mar 2024 12:28:17 AM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|2
total_score: 50/70
8c7d349
Sun 17 Mar 2024 12:28:44 AM UTC: 
 exercises.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|1
total_score: 60/70
90c2a42
